--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Nunito', sans-serif;
-            background-color: #fdfbf7; /* Warm neutral background */
+            background-color: #fff1f2; /* Soft Rose Background - Alterado para destacar os cartões */
             color: #44403c; /* Stone 700 */
         }
         .chart-container {
