--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
                                 <span class="font-extrabold text-stone-700">Proteína</span>
                                 <div class="text-right text-sm">
-                                    <div class="text-green-600 font-bold mb-1">✅ Ovos, Frango, Atum</div>
+                                    <div class="text-green-600 font-bold mb-1">✅ Ovos, Frango, Atum, Sardinha, Carne Moída</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Salsicha, Linguiça</div>
                                 </div>
                             </div>
@@ -368,10 +368,10 @@
                             <div class="absolute -right-4 -top-4 w-24 h-24 bg-rose-200 rounded-full opacity-50 blur-xl"></div>
                             <h3 class="font-bold text-rose-700 mb-3 text-lg">🎉 Fim de Semana</h3>
                             <p class="text-rose-900 text-sm leading-relaxed">
-                                Você tem direito a <strong>2 Refeições Livres</strong>. Pizza ou Churrasco? Pode!
+                                Ninguém é de ferro! Aproveite suas <strong>2 Refeições Livres</strong> pra comer o que ama (Pizza? Burguer? Sim!).
                             </p>
                             <div class="mt-4 text-xs font-bold text-rose-600 bg-white/60 p-2 rounded-lg inline-block">
-                                ⚠️ Regra: Comeu, acabou. Volta pro foco!
+                                ⚠️ O segredo: Não chute o balde o fim de semana todo. Fez a refeição livre? Na próxima, volta pro plano!
                             </div>
                         </div>
                         
