--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
                                 <span class="font-extrabold text-stone-700">Proteína</span>
                                 <div class="text-right text-sm">
-                                    <div class="text-green-600 font-bold mb-1">✅ Ovos, Frango, Atum, Sardinha, Carne Moída</div>
+                                    <div class="text-green-600 font-bold mb-1">✅ Ovos, Frango, Atum, Lombo Suíno, Carne Moída</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Salsicha, Linguiça</div>
                                 </div>
                             </div>
