--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                             </div>
                             <div class="bg-white p-6 rounded-2xl border border-stone-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-yellow-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍿</div>
-                                <h3 class="font-bold text-yellow-600 text-lg">Cinema</h3>
+                                <h3 class="font-bold text-yellow-600 text-lg">Pipoca da Tarde</h3>
                                 <p class="text-sm text-stone-600 mt-2 font-medium">Pipoca de panela (1 xícara peq). Pouco sal!</p>
                             </div>
                         </div>
