--- a/index.html
+++ b/index.html
@@ -401,6 +401,30 @@
                                 Vá na <strong>Xepa da Feira</strong>. Morango tá caro? Compra Banana. O importante é não parar.
                             </p>
                         </div>
+
+                         <!-- NEW: SOS TPM & RUA -->
+                        <div class="card-soft p-6 bg-purple-50 border-purple-100">
+                            <h3 class="font-bold text-purple-700 mb-2 flex items-center gap-2">
+                                <span>🍫</span> SOS Formiga
+                            </h3>
+                            
+                            <!-- Em Casa -->
+                            <p class="text-purple-900 text-xs font-bold uppercase tracking-wider mb-1 mt-2">🏠 Em Casa (Baratinho)</p>
+                            <ul class="text-sm text-purple-800 space-y-1 list-disc list-inside mb-4">
+                                <li><strong>Banana "Caramelada":</strong> Micro-ondas + canela.</li>
+                                <li><strong>Gelatina Zero:</strong> Faz potão, caloria quase zero.</li>
+                                <li><strong>Mingauzinho:</strong> Leite + aveia + achocolatado light.</li>
+                            </ul>
+
+                            <!-- Na Rua -->
+                            <p class="text-purple-900 text-xs font-bold uppercase tracking-wider mb-1 border-t border-purple-200 pt-2">🚨 Deu Surto na Rua</p>
+                            <ul class="text-sm text-purple-800 space-y-1 list-disc list-inside">
+                                <li><strong>1 Paçoca:</strong> Vende no caixa, mata a vontade e é barato.</li>
+                                <li><strong>1 Bombom Unitário:</strong> Compra UM (Ouro Branco/Sonho de Valsa) e sai correndo da loja!</li>
+                                <li><strong>Coca Zero / Guaraná Zero:</strong> O doce do adoçante ajuda muito a acalmar.</li>
+                                <li><strong>Bananinha sem açúcar:</strong> Aquelas de mercado/farmácia.</li>
+                            </ul>
+                        </div>
                     </div>
 
                 </section>
