--- a/index.html
+++ b/index.html
@@ -425,6 +425,42 @@
                                 <li><strong>Bananinha sem açúcar:</strong> Aquelas de mercado/farmácia.</li>
                             </ul>
                         </div>
+
+                        <!-- NEW: Suplementos -->
+                        <div class="card-soft p-6 bg-teal-50 border-teal-100">
+                            <h3 class="font-bold text-teal-700 mb-2 flex items-center gap-2">
+                                <span>💊</span> Kit da Bestie (Quando der $$)
+                            </h3>
+                            <p class="text-teal-900 text-sm mb-3">
+                                Comida de verdade vem primeiro! Mas se sobrar uma grana, investe nesses aqui (nessa ordem):
+                            </p>
+                            <ul class="text-sm text-teal-800 space-y-3">
+                                <li class="flex items-start gap-2">
+                                    <span class="text-lg mt-0.5">🌾</span>
+                                    <div>
+                                        <strong>Fiber (Growth/Similar):</strong> 
+                                        <p class="text-xs mt-0.5 opacity-90">Psyllium em pó. Salva o intestino e enche a barriga. Mistura no suco ou água!</p>
+                                    </div>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <span class="text-lg mt-0.5">🥤</span>
+                                    <div>
+                                        <strong>Whey Protein:</strong> 
+                                        <p class="text-xs mt-0.5 opacity-90">Lanche rápido e mata a vontade de doce (faz creminho com pouca água ou mistura no iogurte).</p>
+                                    </div>
+                                </li>
+                                <li class="flex items-start gap-2">
+                                    <span class="text-lg mt-0.5">💪</span>
+                                    <div>
+                                        <strong>Creatina:</strong> 
+                                        <p class="text-xs mt-0.5 opacity-90">Oclaro! Dá força no treino e protege seus músculos. 3g a 5g todo dia.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                             <div class="mt-4 text-xs font-bold text-teal-600 bg-white/60 p-2 rounded-lg inline-block">
+                                ⚠️ Dica: Compra direto nos sites das fábricas (tipo Growth) que sai bem mais barato que na farmácia!
+                            </div>
+                        </div>
                     </div>
 
                 </section>
