--- a/index.html
+++ b/index.html
@@ -342,11 +342,12 @@
                 </div>
 
                 <!-- SEÇÃO 2: Trocas e Dicas (Layout Assimétrico) -->
-                <section class="grid grid-cols-1 md:grid-cols-12 gap-6 pb-6"> <!-- Reduzido pb-12 para pb-6 -->
+                <!-- Adicionado items-start para evitar que a coluna da esquerda estique desnecessariamente -->
+                <section class="grid grid-cols-1 md:grid-cols-12 gap-6 pb-6 items-start"> 
                     
                     <!-- Coluna Esquerda: Trocas (Maior) -->
-                    <!-- REDUZIDO PADDING DE p-8 para p-6 -->
-                    <div class="md:col-span-7 card-soft p-6 bg-white">
+                    <!-- Adicionado h-fit -->
+                    <div class="md:col-span-7 card-soft p-6 bg-white h-fit">
                         <h3 class="font-bold text-violet-800 text-xl mb-6 flex items-center gap-2">
                             <span class="bg-violet-100 p-1.5 rounded-lg text-violet-600 text-base">🔄</span> Trocas da Bestie
                         </h3>
