--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </aside>
 
         <!-- MAIN CONTENT: O Guia Prático -->
-        <main class="main-content px-4 lg:px-10 pb-6"> <!-- Reduzido pb-10 para pb-6 -->
+        <main class="main-content px-4 lg:px-10 pb-6">
             <div class="max-w-5xl mx-auto"> 
                 
                 <!-- SEÇÃO 1: Header + Cardápio (FIXO NO TOPO) -->
@@ -251,23 +251,23 @@
                             <div class="text-3xl bg-violet-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">❤️</div>
                             <div>
                                 <h3 class="font-bold text-violet-600 text-lg">Opção 1 (A Favorita)</h3>
-                                <p class="text-stone-700 mt-1">1 Pãozinho francês na chapa (sem miolo) + 2 Ovos mexidos.</p>
-                                <p class="text-xs font-bold text-stone-400 mt-2 uppercase tracking-wide">Bebida</p>
-                                <p class="text-sm text-stone-600">Café preto ou Leite desnatado + 1 colherzinha de Achocolatado Light.</p>
+                                <p class="text-violet-800 mt-1">1 Pãozinho francês na chapa (sem miolo) + 2 Ovos mexidos.</p>
+                                <p class="text-xs font-bold text-violet-400 mt-2 uppercase tracking-wide">Bebida</p>
+                                <p class="text-sm text-violet-600">Café preto ou Leite desnatado + 1 colherzinha de Achocolatado Light.</p>
                             </div>
                         </div>
-                        <div class="flex gap-4 p-5 rounded-2xl bg-white border border-stone-100 shadow-sm hover:border-yellow-300 transition group">
+                        <div class="flex gap-4 p-5 rounded-2xl bg-white border border-violet-100 shadow-sm hover:border-yellow-300 transition group">
                             <div class="text-3xl bg-yellow-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">🌽</div>
                             <div>
-                                <h3 class="font-bold text-stone-700 text-lg">Opção 2 (Sustança)</h3>
-                                <p class="text-stone-600 mt-1">Cuscuz (4 colheres hidratado) com 1 fatia de queijo mussarela ou 1 ovo.</p>
+                                <h3 class="font-bold text-violet-800 text-lg">Opção 2 (Sustança)</h3>
+                                <p class="text-violet-600 mt-1">Cuscuz (4 colheres hidratado) com 1 fatia de queijo mussarela ou 1 ovo.</p>
                             </div>
                         </div>
-                        <div class="flex gap-4 p-5 rounded-2xl bg-white border border-stone-100 shadow-sm hover:border-purple-300 transition group">
+                        <div class="flex gap-4 p-5 rounded-2xl bg-white border border-violet-100 shadow-sm hover:border-purple-300 transition group">
                             <div class="text-3xl bg-purple-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">✨</div>
                             <div>
-                                <h3 class="font-bold text-stone-700 text-lg">Opção 3 (Chique)</h3>
-                                <p class="text-stone-600 mt-1">Tapioca (goma fina) recheada com frango desfiado e requeijão light.</p>
+                                <h3 class="font-bold text-violet-800 text-lg">Opção 3 (Chique)</h3>
+                                <p class="text-violet-600 mt-1">Tapioca (goma fina) recheada com frango desfiado e requeijão light.</p>
                             </div>
                         </div>
                     </div>
@@ -281,14 +281,14 @@
                             <p class="text-green-900 font-medium">Metade do prato é <strong>SALADA</strong> (Repolho, Alface, Tomate) + <strong>LEGUMES</strong> (Abóbora, Cenoura, Brócolis).</p>
                         </div>
                         <div class="grid md:grid-cols-2 gap-6">
-                            <div class="p-6 rounded-2xl bg-white border border-stone-100 shadow-sm">
+                            <div class="p-6 rounded-2xl bg-white border border-violet-100 shadow-sm">
                                 <span class="inline-block px-2 py-1 bg-violet-100 text-violet-600 rounded text-xs font-bold uppercase mb-2">Proteína</span>
-                                <p class="font-bold text-stone-800 text-xl">1 Filé de frango <span class="text-stone-400 text-base font-normal">ou</span> 2 Ovos</p>
+                                <p class="font-bold text-violet-800 text-xl">1 Filé de frango <span class="text-violet-400 text-base font-normal">ou</span> 2 Ovos</p>
                             </div>
-                            <div class="p-6 rounded-2xl bg-white border border-stone-100 shadow-sm">
+                            <div class="p-6 rounded-2xl bg-white border border-violet-100 shadow-sm">
                                 <span class="inline-block px-2 py-1 bg-yellow-100 text-yellow-600 rounded text-xs font-bold uppercase mb-2">Carbo (Energia)</span>
-                                <p class="font-bold text-stone-800 text-xl">3 col. Arroz + 1 concha Feijão</p>
-                                <p class="text-xs text-stone-500 mt-2 italic border-t border-stone-100 pt-2">Troca: Arroz → 1 Batata Inglesa</p>
+                                <p class="font-bold text-violet-800 text-xl">3 col. Arroz + 1 concha Feijão</p>
+                                <p class="text-xs text-violet-500 mt-2 italic border-t border-violet-100 pt-2">Troca: Arroz → 1 Batata Inglesa</p>
                             </div>
                         </div>
                     </div>
@@ -296,24 +296,24 @@
                     <!-- Lanche -->
                     <div id="content-lanche" class="hidden animate-enter relative z-10">
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                            <div class="bg-white p-6 rounded-2xl border border-stone-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
+                            <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-violet-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍓</div>
                                 <h3 class="font-bold text-violet-600 text-lg">Fresquinho</h3>
-                                <p class="text-sm text-stone-600 mt-2 font-medium">Iogurte Natural + Morangos picados.</p>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">Iogurte Natural + Morangos picados.</p>
                             </div>
-                            <div class="bg-white p-6 rounded-2xl border border-stone-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
+                            <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-orange-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍞</div>
-                                <h3 class="font-bold text-stone-700 text-lg">Clássico</h3>
-                                <p class="text-sm text-stone-600 mt-2 font-medium">Pão tostado c/ requeijão + Leite com Toddy Light.</p>
+                                <h3 class="font-bold text-violet-700 text-lg">Clássico</h3>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">Pão tostado c/ requeijão + Leite com Toddy Light.</p>
                             </div>
-                            <div class="bg-white p-6 rounded-2xl border border-stone-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
+                            <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-yellow-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍿</div>
                                 <h3 class="font-bold text-yellow-600 text-lg">Pipoca da Tarde</h3>
-                                <p class="text-sm text-stone-600 mt-2 font-medium">Pipoca de panela (1 xícara peq). Pouco sal!</p>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">Pipoca de panela (1 xícara peq). Pouco sal!</p>
                             </div>
                         </div>
                         <div class="mt-8 text-center">
-                            <span class="inline-flex items-center gap-2 bg-stone-100 text-stone-600 px-5 py-2 rounded-full text-sm font-bold shadow-inner">
+                            <span class="inline-flex items-center gap-2 bg-violet-100 text-violet-600 px-5 py-2 rounded-full text-sm font-bold shadow-inner">
                                 <span>💡</span> Fome pequena? Vá de Melancia ou Gelatina Zero.
                             </span>
                         </div>
@@ -324,69 +324,67 @@
                         <div class="grid md:grid-cols-3 gap-4">
                             <div class="p-6 rounded-2xl bg-white border border-green-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-green-400"></div>
-                                <h3 class="font-bold text-stone-700 text-lg group-hover:text-green-600 transition">💸 Economia</h3>
-                                <p class="text-stone-500 text-sm mt-1">Repete o almoço! Melhor estratégia.</p>
+                                <h3 class="font-bold text-violet-700 text-lg group-hover:text-green-600 transition">💸 Economia</h3>
+                                <p class="text-violet-500 text-sm mt-1">Repete o almoço! Melhor estratégia.</p>
                             </div>
                             <div class="p-6 rounded-2xl bg-white border border-yellow-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-yellow-400"></div>
-                                <h3 class="font-bold text-stone-700 text-lg group-hover:text-yellow-600 transition">🍳 Omeleteira</h3>
-                                <p class="text-stone-500 text-sm mt-1">2 ovos, queijo, tomate e orégano.</p>
+                                <h3 class="font-bold text-violet-700 text-lg group-hover:text-yellow-600 transition">🍳 Omeleteira</h3>
+                                <p class="text-violet-500 text-sm mt-1">2 ovos, queijo, tomate e orégano.</p>
                             </div>
                             <div class="p-6 rounded-2xl bg-white border border-rose-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-rose-400"></div>
-                                <h3 class="font-bold text-stone-700 text-lg group-hover:text-rose-500 transition">🍲 Sopinha</h3>
-                                <p class="text-stone-500 text-sm mt-1">Legumes com frango (base de abóbora).</p>
+                                <h3 class="font-bold text-violet-700 text-lg group-hover:text-rose-500 transition">🍲 Sopinha</h3>
+                                <p class="text-violet-500 text-sm mt-1">Legumes com frango (base de abóbora).</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- SEÇÃO 2: Trocas e Dicas (Layout Assimétrico) -->
-                <!-- Adicionado items-start para evitar que a coluna da esquerda estique desnecessariamente -->
                 <section class="grid grid-cols-1 md:grid-cols-12 gap-6 pb-6 items-start"> 
                     
                     <!-- Coluna Esquerda: Trocas (Maior) -->
-                    <!-- Adicionado h-fit -->
                     <div class="md:col-span-7 card-soft p-6 bg-white h-fit">
                         <h3 class="font-bold text-violet-800 text-xl mb-6 flex items-center gap-2">
                             <span class="bg-violet-100 p-1.5 rounded-lg text-violet-600 text-base">🔄</span> Trocas da Bestie
                         </h3>
                         <div class="space-y-4">
                             <!-- Item 1: Proteína -->
-                            <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
-                                <span class="font-extrabold text-stone-700">Proteína</span>
+                            <div class="flex items-center justify-between p-4 bg-violet-50/50 rounded-2xl border border-violet-100">
+                                <span class="font-extrabold text-violet-800">Proteína</span>
                                 <div class="text-right text-sm">
                                     <div class="text-green-600 font-bold mb-1">✅ Ovos, Frango, Atum, Lombo, Carne Moída</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Salsicha, Linguiça</div>
                                 </div>
                             </div>
                             <!-- Item 2: Carbo -->
-                            <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
-                                <span class="font-extrabold text-stone-700">Carbo</span>
+                            <div class="flex items-center justify-between p-4 bg-violet-50/50 rounded-2xl border border-violet-100">
+                                <span class="font-extrabold text-violet-800">Carbo</span>
                                 <div class="text-right text-sm">
                                     <div class="text-green-600 font-bold mb-1">✅ Batata Inglesa, Arroz, Mandioca</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Integrais, Biscoito Recheado</div>
                                 </div>
                             </div>
                             <!-- Item 3: Vegetais -->
-                            <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
-                                <span class="font-extrabold text-stone-700">Vegetais</span>
+                            <div class="flex items-center justify-between p-4 bg-violet-50/50 rounded-2xl border border-violet-100">
+                                <span class="font-extrabold text-violet-800">Vegetais</span>
                                 <div class="text-right text-sm">
                                     <div class="text-green-600 font-bold mb-1">✅ Repolho, Alface, Abóbora, Cenoura</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Chuchu, Ervilha, Milho</div>
                                 </div>
                             </div>
                             <!-- Item 4: Frutas -->
-                            <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
-                                <span class="font-extrabold text-stone-700">Frutas</span>
+                            <div class="flex items-center justify-between p-4 bg-violet-50/50 rounded-2xl border border-violet-100">
+                                <span class="font-extrabold text-violet-800">Frutas</span>
                                 <div class="text-right text-sm">
                                     <div class="text-green-600 font-bold mb-1">✅ Melancia, Morango, Banana</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Abacaxi, Frutas em Calda</div>
                                 </div>
                             </div>
                             <!-- Item 5: Extras -->
-                            <div class="flex items-center justify-between p-4 bg-stone-50 rounded-2xl border border-stone-100">
-                                <span class="font-extrabold text-stone-700">Extras</span>
+                            <div class="flex items-center justify-between p-4 bg-violet-50/50 rounded-2xl border border-violet-100">
+                                <span class="font-extrabold text-violet-800">Extras</span>
                                 <div class="text-right text-sm">
                                     <div class="text-green-600 font-bold mb-1">✅ Gelatina Zero, Adoçante, Cacau</div>
                                     <div class="text-red-400 font-medium text-xs">❌ Açúcar Puro, Achocolatado Normal</div>
