--- a/index.html
+++ b/index.html
@@ -310,7 +310,10 @@
                             <div class="text-3xl bg-violet-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">❤️</div>
                             <div>
                                 <h3 class="font-bold text-violet-600 text-lg">Opção 1 (A Favorita)</h3>
-                                <p class="text-violet-800 mt-1">1 Pãozinho francês na chapa (sem miolo) + 2 Ovos mexidos.</p>
+                                <p class="text-violet-800 mt-1">
+                                    <strong>50g</strong> Pão Francês sem miolo (1 un) + 
+                                    <br><strong>100g</strong> Ovos mexidos (2 un).
+                                </p>
                                 <p class="text-xs font-bold text-violet-400 mt-2 uppercase tracking-wide">Bebida</p>
                                 <p class="text-sm text-violet-600">Café preto ou Leite desnatado + 1 colherzinha de Achocolatado Light.</p>
                             </div>
@@ -319,14 +322,20 @@
                             <div class="text-3xl bg-yellow-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">🌽</div>
                             <div>
                                 <h3 class="font-bold text-violet-800 text-lg">Opção 2 (Sustança)</h3>
-                                <p class="text-violet-600 mt-1">Cuscuz (4 colheres hidratado) com 1 fatia de queijo mussarela ou 1 ovo.</p>
+                                <p class="text-violet-600 mt-1">
+                                    <strong>100g</strong> Cuscuz pronto (4 col. sopa) com 
+                                    <br><strong>30g</strong> Queijo Mussarela (1 fatia) ou 1 Ovo.
+                                </p>
                             </div>
                         </div>
                         <div class="flex gap-4 p-5 rounded-2xl bg-white border border-violet-100 shadow-sm hover:border-purple-300 transition group">
                             <div class="text-3xl bg-purple-50 w-14 h-14 rounded-full flex items-center justify-center group-hover:scale-110 transition">✨</div>
                             <div>
                                 <h3 class="font-bold text-violet-800 text-lg">Opção 3 (Chique)</h3>
-                                <p class="text-violet-600 mt-1">Tapioca (goma fina) recheada com frango desfiado e requeijão light.</p>
+                                <p class="text-violet-600 mt-1">
+                                    <strong>60g</strong> Tapioca (3 col. sopa) com 
+                                    <br><strong>80g</strong> Frango (4 col. sopa) + <strong>30g</strong> Requeijão (1 col. sopa).
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -337,17 +346,25 @@
                             <h3 class="font-bold text-green-800 text-xl mb-2 flex items-center justify-center gap-2">
                                 <span>🥗</span> A Regra de Ouro
                             </h3>
-                            <p class="text-green-900 font-medium">Metade do prato é <strong>SALADA</strong> (Repolho, Alface, Tomate) + <strong>LEGUMES</strong> (Abóbora, Cenoura, Brócolis).</p>
+                            <p class="text-green-900 font-medium">Metade do prato (aprox. <strong>200g</strong>) é <strong>SALADA</strong> (Repolho, Alface) + <strong>LEGUMES</strong> (Abóbora, Cenoura).</p>
                         </div>
                         <div class="grid md:grid-cols-2 gap-6">
                             <div class="p-6 rounded-2xl bg-white border border-violet-100 shadow-sm">
                                 <span class="inline-block px-2 py-1 bg-violet-100 text-violet-600 rounded text-xs font-bold uppercase mb-2">Proteína</span>
-                                <p class="font-bold text-violet-800 text-xl">1 Filé de frango <span class="text-violet-400 text-base font-normal">ou</span> 2 Ovos</p>
+                                <p class="font-bold text-violet-800 text-xl">
+                                    100g <span class="text-base font-normal text-violet-600">(1 filé médio ou 4 col. carne moída)</span>
+                                    <br><span class="text-sm font-normal text-violet-400">ou 2 Ovos</span>
+                                </p>
                             </div>
                             <div class="p-6 rounded-2xl bg-white border border-violet-100 shadow-sm">
                                 <span class="inline-block px-2 py-1 bg-yellow-100 text-yellow-600 rounded text-xs font-bold uppercase mb-2">Carbo (Energia)</span>
-                                <p class="font-bold text-violet-800 text-xl">3 col. Arroz + 1 concha Feijão</p>
-                                <p class="text-xs text-violet-500 mt-2 italic border-t border-violet-100 pt-2">Troca: Arroz → 1 Batata Inglesa</p>
+                                <p class="font-bold text-violet-800 text-lg">
+                                    90g Arroz <span class="text-sm font-normal">(3 col. sopa)</span> + 
+                                    <br>140g Feijão <span class="text-sm font-normal">(1 concha)</span>
+                                </p>
+                                <p class="text-xs text-violet-500 mt-2 italic border-t border-violet-100 pt-2">
+                                    Troca: <strong>150g</strong> Batata/Mandioca (2 pedaços médios)
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -358,17 +375,23 @@
                             <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-violet-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍓</div>
                                 <h3 class="font-bold text-violet-600 text-lg">Fresquinho</h3>
-                                <p class="text-sm text-violet-600 mt-2 font-medium">Iogurte Natural + Morangos picados.</p>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">
+                                    <strong>170g</strong> Iogurte (1 pote) + <br><strong>150g</strong> Morango (1 xícara).
+                                </p>
                             </div>
                             <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-orange-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍞</div>
                                 <h3 class="font-bold text-violet-700 text-lg">Clássico</h3>
-                                <p class="text-sm text-violet-600 mt-2 font-medium">Pão tostado c/ requeijão + Leite com Toddy Light.</p>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">
+                                    <strong>50g</strong> Pão (2 fatias) + <br><strong>30g</strong> Requeijão (1 col. sopa).
+                                </p>
                             </div>
                             <div class="bg-white p-6 rounded-2xl border border-violet-100 text-center hover:shadow-lg hover:-translate-y-1 transition duration-300">
                                 <div class="text-5xl mb-4 bg-yellow-50 w-20 h-20 rounded-full flex items-center justify-center mx-auto">🍿</div>
                                 <h3 class="font-bold text-yellow-600 text-lg">Pipoca da Tarde</h3>
-                                <p class="text-sm text-violet-600 mt-2 font-medium">Pipoca de panela (1 xícara peq). Pouco sal!</p>
+                                <p class="text-sm text-violet-600 mt-2 font-medium">
+                                    <strong>30g</strong> Milho (2 col. sopa) estourado. Pouco sal!
+                                </p>
                             </div>
                         </div>
                         <div class="mt-8 text-center">
@@ -384,17 +407,17 @@
                             <div class="p-6 rounded-2xl bg-white border border-green-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-green-400"></div>
                                 <h3 class="font-bold text-violet-700 text-lg group-hover:text-green-600 transition">💸 Economia</h3>
-                                <p class="text-violet-500 text-sm mt-1">Repete o almoço! Melhor estratégia.</p>
+                                <p class="text-violet-500 text-sm mt-1">Repete o almoço! Mesmas quantidades.</p>
                             </div>
                             <div class="p-6 rounded-2xl bg-white border border-yellow-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-yellow-400"></div>
                                 <h3 class="font-bold text-violet-700 text-lg group-hover:text-yellow-600 transition">🍳 Omeleteira</h3>
-                                <p class="text-violet-500 text-sm mt-1">2 ovos, queijo, tomate e orégano.</p>
+                                <p class="text-violet-500 text-sm mt-1">2 ovos + recheio à vontade (tomate/cebola).</p>
                             </div>
                             <div class="p-6 rounded-2xl bg-white border border-rose-100 shadow-sm relative overflow-hidden group">
                                 <div class="absolute top-0 left-0 w-2 h-full bg-rose-400"></div>
                                 <h3 class="font-bold text-violet-700 text-lg group-hover:text-rose-500 transition">🍲 Sopinha</h3>
-                                <p class="text-violet-500 text-sm mt-1">Legumes com frango (base de abóbora).</p>
+                                <p class="text-violet-500 text-sm mt-1">Legumes + <strong>100g</strong> frango desfiado.</p>
                             </div>
                         </div>
                     </div>
