--- a/index.html
+++ b/index.html
@@ -244,9 +244,14 @@
                 <h1 class="text-4xl font-extrabold text-violet-900 leading-tight tracking-tight">
                     Secando sem <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-violet-600 to-fuchsia-500">Neura</span> 💅
                 </h1>
-                <p class="text-violet-400 mt-3 font-medium leading-relaxed">
+                <p class="text-violet-400 mt-3 font-medium leading-relaxed mb-4">
                     Ficar fina comendo arroz, feijão e batata, gastando pouco.
                 </p>
+                
+                <!-- Área de Login (Nova) -->
+                <div id="auth-section">
+                    <!-- Botão será injetado aqui via JS -->
+                </div>
             </div>
 
             <!-- Card: Hidratação (Destaque) -->
